teste para endpoint findAll da classe userResouce implementado